[Cronet] Make HistogramManager public APIs thread-safe.

CronetEngine.getGlobalMetricsDeltas() exposes the underlying
HistogramManager public APIs on multiple threads, so crashes
can occur if accessed concurrently. The current public APIs
are GetInstance() which simply accesses a thread-safe
LazyInstance, and GetDeltas() which doesn't look thread-safe
so I've added a Lock.

BUG=603028

Review URL: https://codereview.chromium.org/1882563004

Cr-Commit-Position: refs/heads/master@{#387009}

Former-commit-id: 487de2df8db4a96fd24e6998590ae715142447ec